src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidTypeInArray.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">

	<Button>
            <cc:MyClass.MyBrushes>
                <SolidColorBrush Color="Red" />
                <DockPanel />
            </cc:MyClass.MyBrushes>
        </Button>

</DockPanel>
</Page>
